@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -15,6 +16,7 @@
  */
 
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 
 import com.sun.appserv.test.BaseDevTest;
@@ -56,7 +58,7 @@ public class WebTest extends BaseDevTest {
     }
 
     private boolean invoke(final String expected) throws Exception {
-        URL url = new URL("http://" + host + ":" + port + "/test.xyz");
+        URL url = URI.create("http://" + host + ":" + port + "/test.xyz").toURL();
         System.out.println("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
