@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -54,7 +55,7 @@ public class WebTest {
     }
 
     private void doTest(String path) throws Exception {
-        URL url = new URL("http://" + host  + ":" + port + contextRoot + path);
+        URL url = URI.create("http://" + host  + ":" + port + contextRoot + path).toURL();
         System.out.println("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
