@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -150,7 +151,7 @@ public class WebTest extends BaseDevTest {
 
             String redirect = location.substring("Location:".length()).trim();
             // follow the redirect
-            int cA1 = go(port1, new URL(redirect).getPath(), "A");
+            int cA1 = go(port1, URI.create(redirect).toURL().getPath(), "A");
             int cB1 = go(port1, contextRootPrefix + "-b/index.jsp", "B");
 
             // stop inst1
