@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -22,6 +23,7 @@ import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
 import java.net.Socket;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 
@@ -55,7 +57,7 @@ public class WebTest {
 
     private static void checkResponseCode(final String host, final int port, final String contextPath)
         throws IOException {
-        final URL url = new URL("http://" + host + ":" + port + contextPath);
+        final URL url = URI.create("http://" + host + ":" + port + contextPath).toURL();
         System.out.println("\n Invoking url: " + url.toString());
         final URLConnection conn = url.openConnection();
         DataOutputStream out = null;
