@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -83,7 +84,7 @@ public class WebTest {
         InputStream is = null;
         BufferedReader input = null;
         try {
-            URL url = new URL("http://" + host  + ':' + port + '/' + contextRoot + path);
+            URL url = URI.create("http://" + host  + ':' + port + '/' + contextRoot + path).toURL();
             System.out.println("Connecting to: " + url.toString());
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.connect();
@@ -132,7 +133,7 @@ is));
     public void doTest2(String path, String testName) {
 
         try {
-            URL url = new URL("http://" + host  + ':' + port + '/' + contextRoot + path);
+            URL url = URI.create("http://" + host  + ':' + port + '/' + contextRoot + path).toURL();
             System.out.println("Connecting to: " + url.toString());
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.connect();
@@ -155,8 +156,8 @@ is));
         InputStream is = null;
         BufferedReader input = null;
         try {
-            URL url = new URL("http://" + host  + ':' + port + '/' + contextRoot
- + path);
+            URL url = URI.create("http://" + host  + ':' + port + '/' + contextRoot
+ + path).toURL();
             System.out.println("Connecting to: " + url.toString());
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.connect();
@@ -208,8 +209,8 @@ is));
         InputStream is = null;
         BufferedReader input = null;
         try {
-            URL url = new URL("http://" + host  + ':' + port + '/' + contextRoot
- + path);
+            URL url = URI.create("http://" + host  + ':' + port + '/' + contextRoot
+ + path).toURL();
             System.out.println("Connecting to: " + url.toString());
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.connect();
