@@ -18,6 +18,7 @@
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.security.KeyStore;
 import javax.net.ssl.HostnameVerifier;
@@ -79,7 +80,7 @@ public class WebTest extends BaseDevTest {
     }
 
     private HttpsURLConnection doSSLHandshake(String urlAddress, SSLSocketFactory ssf) throws Exception {
-        URL url = new URL(urlAddress);
+        URL url = URI.create(urlAddress).toURL();
         HttpsURLConnection.setDefaultSSLSocketFactory(ssf);
         HttpsURLConnection connection = (HttpsURLConnection) url.openConnection();
 
