@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 2017, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -63,9 +64,9 @@ public class YassonTest {
 
     private void invoke() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port + contextRoot
+        URL url = URI.create("http://" + host  + ":" + port + contextRoot
                           + "/TransformToJson?parameter="
-                          + URLEncoder.encode(PARAMETER));
+                          + URLEncoder.encode(PARAMETER)).toURL();
         System.out.println("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
