@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 2002, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -16,8 +17,9 @@
 
 package client;
 
-import java.net.URL;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URL;
 import java.io.InputStream;
 import java.util.Map;
 import java.util.Iterator;
@@ -44,7 +46,7 @@ public class Client {
     public void doTest(String[] args) {
         try {
             String webURL = args[0];
-            URL url = new URL(args[0] + "//");
+            URL url = URI.create(args[0] + "//").toURL();
             System.out.println("Invoking " + url.toExternalForm());
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
             connection.connect();
