@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -124,7 +125,7 @@ public class ExtensionsTestNG {
     }
 
     private boolean checkForString(String testurl, String str) throws Exception {
-        URL url = new URL(testurl);
+        URL url = URI.create(testurl).toURL();
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
         int responseCode = conn.getResponseCode();
